--- a/src/main/webapp/common/common.jspf
+++ b/src/main/webapp/common/common.jspf
@@ -4,8 +4,8 @@
 <%@ taglib prefix="fmt" uri="http://java.sun.com/jsp/jstl/fmt"%>
 <%@ taglib uri="http://java.sun.com/jsp/jstl/functions" prefix="fn"%>
 <c:set var="ctx" value="${pageContext.request.contextPath}" />
-<title>蓝缘管理系统</title>
-<META HTTP-EQUIV="Pragma" CONTENT="no-cache">
+<title>飓风管理系统</title>
+<META HTTP-EQUIV="Pragma" CONTENT="no-cache"> 
 <META HTTP-EQUIV="Cache-Control" CONTENT="no-cache">
 <META HTTP-EQUIV="Expires" CONTENT="0">
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
